# metasepi-website

./: .gitignore  Makefile  about.md  docs.md  hakyll.hs  index.html  index.markdown  map.md  memories.md  metasepi-website.cabal  papers.md  past-supporters.md
css/: default.css  style.css
doc/: 20130508_5year_plan.doc  20140508_5year_plan.doc
draw/: 2012-12-22-jhc_compile.odg  2012-12-27-arafura_design.odg  2012-12-27-compile.odg  2012-12-27-loader.odg  2013-01-09-sequence_diagram.odg  2013-01-25-jhc_compile_flow.odg  2013-02-14-jhc_grin_to_c_1_v-930757141.odg  2013-02-14-jhc_grin_to_c_E__f.odg  2013-02-17-jhc_grin_to_c_c2.odg  2013-06-22-remembered_set.odg  20131217_android-fw.odg  2016-09-17-interface_c_ats.dia
plan/: README.md  metasepi-arafura.html  metasepi-arafura.planner  metasepi-bohai.html  metasepi-bohai.planner  metasepi-bohai2.html  metasepi-bohai2.planner  metasepi-chiers-bohai.html  metasepi-chiers-bohai.planner  planner.sh
po/: en.po  ja.po
posts/: 2012-08-05-start-metasepi.md  2012-08-18-haskell-or-ocaml-os.md  2012-12-22-jhc.md  2012-12-27-design_arafura.md  2013-01-09-design_arafura.md  2013-01-12-jhc_manual_ja.md  2013-01-18-jhc_internal_c_fromgrin.md  2013-01-31-jhc_internal_overview.md  2013-02-03-kickoff_meeting.md  2013-02-05-ocamlopt.md  2013-02-14-jhc_grin_to_c.md  2013-02-19-jhc_zen.md  2013-03-16-found_ajhc.md  2013-04-22-travel_in_kyoto-u.md  2013-05-16-jhc_grin_to_c.md  2013-05-17-jgc_detail.md  2013-05-18-reentrant_jhc.md  2013-06-04-forkos_jhc.md  2013-06-07-jhc_grin_to_c_withsrc.md  2013-06-20-forkos_jhc.md  2013-11-10-kof2013.md  (+20 more)
(+34 files in other folders)
